// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Buttons correctly without props 1`] = `
<div
  className="button-container"
>
  <Button
    text="Run"
  />
  <Button
    text="Clear"
  />
  <Button
    text="Reset"
  />
</div>
`;

exports[`should render buttons correctly with prop.isRunning=false 1`] = `
<div
  className="button-container"
>
  <Button
    onClick="a"
    text="Run"
  />
  <Button
    onClick="c"
    text="Clear"
  />
  <Button
    onClick="d"
    text="Reset"
  />
</div>
`;

exports[`should render buttons correctly with prop.isRunning=true 1`] = `
<div
  className="button-container"
>
  <Button
    onClick="b"
    text="Pause"
  />
  <Button
    onClick="c"
    text="Clear"
  />
  <Button
    onClick="d"
    text="Reset"
  />
</div>
`;
